methods.slug.SlugHunting.scala.error
Compilation error:
SlugHunting:23: error: not found: value isOverBaggel
  while(!isOverBaggel()){
         ^