methods.slug.SlugHunting.scala.code
def step() {
    brushDown();
    forward();
    brushUp();
  }

def isFacingTrail():Boolean = {
  var returnVar = false
	if(!isFacingWall()){
    forward();
    returnVar = (getGroundColor() == Color.green);
    backward();
    return returnVar;
    
  }
  else 
    return false 
}


def hunt() {
	while(!isOverBaggel()){
    if(isFacingTrail()) {
      step();
    } else {
      right();
      if(isFacingTrail()) {
        step();
      } else {
        right();
        right();
        step();
      }
    }
  }
  pickupBaggle()
}